fix overlap of version box and authorlistbox

--- a/scribble-lib/scribble/scribble.css
+++ b/scribble-lib/scribble/scribble.css
@@ -500,7 +500,7 @@ ol ol ol ol { list-style-type: upper-alpha; }
   position: relative;
   float: right;
   left: 2em;
-  top: -2.5em;
+  top: -2.25em;
   height: 0em;
   width: 13em;
   margin: 0em -13em 0em 0em;
